nextDays component y todayHighlights component  listos

--- a/src/app/weather/components/next-days/next-days.component.html
+++ b/src/app/weather/components/next-days/next-days.component.html
@@ -1,43 +1,48 @@
 <div class="grid-days">
     <div>
         <h3 class="day">Hoy</h3>
-        <img src="" alt="">
+        <img src="https://cdn.weatherapi.com/weather/128x128/day/{{nextDays.forecast.forecastday[0].day.condition.icon}}.png" alt="">
 
         <div class="temperature">
             <div class="max">
-                <h3>16°C</h3>
+                <h3 *ngIf="gradeSystem === 'celsius'">{{nextDays.forecast.forecastday[0].day.maxtemp_c}}°C</h3>
+                <h3 *ngIf="gradeSystem === 'fahrenheit'">{{nextDays.forecast.forecastday[0].day.maxtemp_f}}°F</h3>
             </div>
             <div class="min">
-                <h3>12°C</h3>
+                <h3 *ngIf="gradeSystem === 'celsius'">{{nextDays.forecast.forecastday[0].day.mintemp_c}}°C</h3>
+                <h3 *ngIf="gradeSystem === 'fahrenheit'">{{nextDays.forecast.forecastday[0].day.mintemp_f}}°F</h3>
             </div>
         </div>
     </div>
 
     <div>       
         <h3 class="day">Mañana</h3>
-        <img src="" alt="">
+        <img src="https://cdn.weatherapi.com/weather/128x128/day/{{nextDays.forecast.forecastday[1].day.condition.icon}}.png" alt="">
 
         <div class="temperature">
             <div class="max">
-                <h3 *ngIf="gradeSystem === 'celsius'">16°C</h3>
-                <h3 *ngIf="gradeSystem === 'fahrenheit'"></h3>
+                <h3 *ngIf="gradeSystem === 'celsius'">{{nextDays.forecast.forecastday[1].day.maxtemp_c}}°C</h3>
+                <h3 *ngIf="gradeSystem === 'fahrenheit'">{{nextDays.forecast.forecastday[1].day.maxtemp_f}}°F</h3>
             </div>
             <div class="min">
-                <h3>12°C</h3>
+                <h3 *ngIf="gradeSystem === 'celsius'">{{nextDays.forecast.forecastday[1].day.mintemp_c}}°C</h3>
+                <h3 *ngIf="gradeSystem === 'fahrenheit'">{{nextDays.forecast.forecastday[1].day.mintemp_f}}°F</h3>
             </div>
         </div>
     </div>
 
     <div>
-        <h3 class="day">Sáb 4</h3>
-        <img src="" alt="">
+        <h3 class="day">{{nextDays.forecast.forecastday[2].date | date:'EE dd , MMM'}}</h3>
+        <img src="https://cdn.weatherapi.com/weather/128x128/day/{{nextDays.forecast.forecastday[2].day.condition.icon}}.png" alt="">
 
         <div class="temperature">
             <div class="max">
-                <h3>16°C</h3>
+                <h3  *ngIf="gradeSystem === 'celsius'">{{nextDays.forecast.forecastday[2].day.maxtemp_c}}°C</h3>
+                <h3  *ngIf="gradeSystem === 'fahrenheit'">{{nextDays.forecast.forecastday[2].day.maxtemp_f}}°F</h3>
             </div>
             <div class="min">
-                <h3>12°C</h3>
+                <h3 *ngIf="gradeSystem === 'celsius'">{{nextDays.forecast.forecastday[2].day.mintemp_c}}°C</h3>
+                <h3 *ngIf="gradeSystem === 'fahrenheit'">{{nextDays.forecast.forecastday[2].day.mintemp_f}}°F</h3>
             </div>
         </div>
     </div>
