--- a/src/app/weather/components/today-highlights/today-highlights.component.scss
+++ b/src/app/weather/components/today-highlights/today-highlights.component.scss
@@ -47,3 +47,215 @@
         }
     }
 }
+
+
+@media screen and (min-width:1025px) and (max-width: 1280px){
+    .todayHighlights{
+        margin: 1em 3em 0 3em;
+        h2{
+            color: #E7E7EB;
+            font-family: Raleway;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 1.5em;
+            line-height: 28px;
+    
+    
+        }
+        .grid-highlights{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 1em;
+            div {
+                border-radius: 5px;
+                .status{
+                    color: #E7E7EB;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 1.2em;
+                    line-height: 19px;
+                    margin-top: 1em;
+                    
+                }
+                .status-value{
+                    span{
+                        color: #E7E7EB;
+                        font-family: Raleway;
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 1.2em;
+                        line-height: 19px;
+                    }
+                    color: #E7E7EB;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 2.3em;
+                    margin-top: 1em;
+                    margin-bottom: 1em;
+                }
+                text-align: center;
+                background-color: #1E213A;
+            }
+        }
+    }
+
+}
+
+@media screen and (min-width:768px) and (max-width: 1024px){
+    .todayHighlights{
+        margin: 1em 3em 0 3em;
+        h2{
+            color: #E7E7EB;
+            font-family: Raleway;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 1.2em;
+            line-height: 28px;
+    
+    
+        }
+        .grid-highlights{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 1em;
+            div {
+                border-radius: 5px;
+                .status{
+                    color: #E7E7EB;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 0.9em;
+                    line-height: 19px;
+                    margin-top: 1em;
+                    
+                }
+                .status-value{
+                    span{
+                        color: #E7E7EB;
+                        font-family: Raleway;
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 1.2em;
+                        line-height: 19px;
+                    }
+                    color: #E7E7EB;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 2em;
+                    margin-top: 1em;
+                    margin-bottom: 1em;
+                }
+                text-align: center;
+                background-color: #1E213A;
+            }
+        }
+    }
+
+}
+
+@media screen and (min-width:400px) and (max-width: 768px){
+    .todayHighlights{
+        margin: 1em 1em 0 1em;
+        h2{
+            color: #E7E7EB;
+            font-family: Raleway;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 1.5em;
+            line-height: 28px;
+    
+    
+        }
+        .grid-highlights{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 1em;
+            div {
+                border-radius: 5px;
+                .status{
+                    color: #E7E7EB;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 1em;
+                    line-height: 19px;
+                    margin-top: 1em;
+                    
+                }
+                .status-value{
+                    span{
+                        color: #E7E7EB;
+                        font-family: Raleway;
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 1.3em;
+                        line-height: 19px;
+                    }
+                    color: #E7E7EB;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 2.2em;
+                    margin-top: 1em;
+                    margin-bottom: 1em;
+                }
+                text-align: center;
+                background-color: #1E213A;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 479px){
+    .todayHighlights{
+        h2{
+            color: #E7E7EB;
+            font-family: Raleway;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 1.5em;
+            line-height: 28px;
+    
+    
+        }
+        .grid-highlights{
+            display: block;
+            div {
+                border-radius: 5px;
+                .status{
+                    padding-top: 1em;
+                    color: #E7E7EB;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 1em;
+                    line-height: 19px;
+                    margin-top: 1em;
+                    
+                }
+                .status-value{
+                    span{
+                        color: #E7E7EB;
+                        font-family: Raleway;
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 1.3em;
+                        line-height: 19px;
+                    }
+                    color: #E7E7EB;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 2.2em;
+                    padding-bottom: 0.8em;
+                }
+                text-align: center;
+                background-color: #1E213A;
+            }
+        }
+    }
+}
