--- a/src/app/weather/components/layout/layout.component.scss
+++ b/src/app/weather/components/layout/layout.component.scss
@@ -1,8 +1,9 @@
 .container {
     display: flex;
-    height: 100%;
+    flex-direction: row;
+    height: auto;
     .sidebar{
-        height: 100%;
+        height: auto;
         width: 31%;
         max-width: 31em;
         margin: 0;
@@ -13,6 +14,7 @@
         background-repeat: no-repeat;
     }
     .main{
+        height: auto;
         h1{
             text-align: center;
             font-family: Raleway;
@@ -44,7 +46,7 @@
 
         .footer{
             color: #A09FB1;
-            margin-top: 10em;
+            margin-top: 7em;
             margin-left: 12em;
             text-align: center;
             p {
@@ -61,5 +63,284 @@
             }
         }
         
+    }
+}
+
+
+
+@media screen and (min-width:1024px) and (max-width: 1280px){
+    .container {
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+        .sidebar{
+            height: 100%;
+            width: 30%;
+            max-width: 30em;
+            margin: 0;
+            background-color: #1E213A;
+            background-image: url("../../../../assets/images/Cloud-background.png");
+            background-image: linear-gradient(rgba(30, 33, 58, 0.95) 100%,rgba(30, 33, 58, 0.95) 100%), url("../../../../assets/images/Cloud-background.png");
+            background-position: 50% 20%;
+            background-repeat: no-repeat;
+        }
+        .main{
+            height: 100%;
+            h1{
+                text-align: center;
+                font-family: Raleway;
+                font-style: normal;
+                font-weight: 600;
+                color: #E7E7EB;
+                font-size: 1.5em;
+                margin-bottom: 1em;
+            }
+            display: block;
+            width: 70%;
+            margin: 0;
+            background-color: #100E1D;
+            .buttons{
+                display: flex;
+                flex-direction: row-reverse;
+                margin-top: 1.4em;
+                margin-right: 3em;
+                button {
+                    background-color: #585676;
+                    color: #E7E7EB;
+                    margin-left: 2em;
+                    &.active{
+                        background-color: #E7E7EB;
+                        color: #110E3C
+                    }
+                }
+            }
+    
+            .footer{
+                color: #A09FB1;
+                margin-top: 6em;
+                text-align: center;
+                margin-right: 5em;
+                p {
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 600;
+                    a {
+                        text-decoration: none;
+                        color: #A09FB1;
+                    }
+                    a:hover{
+                        color: azure;
+                    }
+                }
+            }
+            
+        }
+    }    
+}
+
+@media screen and (min-width:768px) and (max-width: 1024px){
+    .container {
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+        .sidebar{
+            height: 100%;
+            width: 30%;
+            max-width: 30em;
+            margin: 0;
+            background-color: #1E213A;
+            background-image: url("../../../../assets/images/Cloud-background.png");
+            background-image: linear-gradient(rgba(30, 33, 58, 0.95) 100%,rgba(30, 33, 58, 0.95) 100%), url("../../../../assets/images/Cloud-background.png");
+            background-position: 50% 20%;
+            background-repeat: no-repeat;
+        }
+        .main{
+            height: 100%;
+            h1{
+                text-align: center;
+                font-family: Raleway;
+                font-style: normal;
+                font-weight: 600;
+                color: #E7E7EB;
+                font-size: 1.5em;
+                margin-bottom: 1em;
+            }
+            display: block;
+            width: 70%;
+            margin: 0;
+            background-color: #100E1D;
+            .buttons{
+                display: flex;
+                flex-direction: row-reverse;
+                margin-top: 1.4em;
+                margin-right: 3em;
+                button {
+                    background-color: #585676;
+                    color: #E7E7EB;
+                    margin-left: 2em;
+                    &.active{
+                        background-color: #E7E7EB;
+                        color: #110E3C
+                    }
+                }
+            }
+    
+            .footer{
+                color: #A09FB1;
+                margin-top: 1em;
+                text-align: center;
+                margin-right: 5em;
+                p {
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 600;
+                    a {
+                        text-decoration: none;
+                        color: #A09FB1;
+                    }
+                    a:hover{
+                        color: azure;
+                    }
+                }
+            }
+            
+        }
+    }    
+
+    @media screen and (min-width:400px) and (max-width: 768px){
+        .container {
+            display: flex;
+            flex-direction: row;
+            height: 100%;
+            .sidebar{
+                height: 100%;
+                width: 25%;
+                max-width: 20em;
+                margin: 0;
+                background-color: #1E213A;
+                background-image: url("../../../../assets/images/Cloud-background.png");
+                background-image: linear-gradient(rgba(30, 33, 58, 0.95) 100%,rgba(30, 33, 58, 0.95) 100%), url("../../../../assets/images/Cloud-background.png");
+                background-position: 50% 20%;
+                background-repeat: no-repeat;
+            }
+            .main{
+                height: 100%;
+                h1{
+                    text-align: center;
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 600;
+                    color: #E7E7EB;
+                    font-size: 1.7em;
+                    margin-bottom: 1em;
+                    margin-top: 1em;
+                }
+                display: block;
+                width: 80%;
+                margin: 0;
+                background-color: #100E1D;
+                .buttons{
+                    display: flex;
+                    flex-direction: row-reverse;
+                    margin-top: 1.4em;
+                    margin-right: 1em;
+                    button {
+                        background-color: #585676;
+                        color: #E7E7EB;
+                        margin-left: 2em;
+                        &.active{
+                            background-color: #E7E7EB;
+                            color: #110E3C
+                        }
+                    }
+                }
+        
+                .footer{
+                    color: #A09FB1;
+                    margin-top: 51em;
+                    text-align: center;
+                    margin-right: 15em;
+                    p {
+                        font-family: Raleway;
+                        font-style: normal;
+                        font-weight: 600;
+                        a {
+                            text-decoration: none;
+                            color: #A09FB1;
+                        }
+                        a:hover{
+                            color: azure;
+                        }
+                    }
+                }
+                
+            }
+        }    
+    }
+}
+
+@media screen and (max-width: 479px){
+    .container {
+        display: flex;
+        flex-direction: column;
+        .sidebar{
+            width: 100%;
+            margin: 0;
+            background-color: #1E213A;
+            background-image: url("../../../../assets/images/Cloud-background.png");
+            background-image: linear-gradient(rgba(30, 33, 58, 0.95) 100%,rgba(30, 33, 58, 0.95) 100%), url("../../../../assets/images/Cloud-background.png");
+            background-position: 50% 20%;
+            background-repeat: no-repeat;
+        }
+        .main{
+            h1{
+                text-align: center;
+                font-family: Raleway;
+                font-style: normal;
+                font-weight: 600;
+                color: #E7E7EB;
+                font-size: 3em;
+                margin-bottom: 1em;
+            }
+            display: block;
+            margin: 0;
+            background-color: #100E1D;
+            .buttons{
+                display: flex;
+                flex-direction: row-reverse;
+                margin-top: 0em;
+                padding-top: 2em;
+                margin-right: 2em;
+                margin-bottom: 2em;
+                button {
+                    background-color: #585676;
+                    color: #E7E7EB;
+                    margin-left: 2em;
+                    &.active{
+                        background-color: #E7E7EB;
+                        color: #110E3C
+                    }
+                }
+            }
+    
+            .footer{
+                color: #A09FB1;
+                margin-top: 4em;               
+                text-align: center;
+                p {
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 600;
+                    a {
+                        text-decoration: none;
+                        color: #A09FB1;
+                    }
+                    a:hover{
+                        color: azure;
+                    }
+                }
+            }
+            
+        }
     }
 }
