--- a/src/app/weather/components/next-days/next-days.component.scss
+++ b/src/app/weather/components/next-days/next-days.component.scss
@@ -5,12 +5,16 @@
     margin: 0 12em;
     div{
         background-color: #1E213A;
+        text-align: center;
+        img {
+            margin-top: 0em;
+        }
         .day{
             font-family: Raleway;
             color: #E7E7EB;
             text-align: center;
             margin-top: 1em;
-            margin-bottom: 1em;
+            margin-bottom: 0em;
             font-weight: 500;
         }
         .temperature{
@@ -29,6 +33,194 @@
                 font-family: Raleway;
                 font-weight: 500;
                 color: #A09FB1;
+            }
+        }
+    }
+}
+
+@media screen and (min-width:1025px) and (max-width: 1280px){
+    .grid-days{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2em;
+        margin: 0 3em;
+        div{
+            border-radius: 5px;
+            background-color: #1E213A;
+            text-align: center;
+            img {
+                margin-top: 0em;
+                width: 64px;
+                height: 64px;
+            }
+            .day{
+                font-family: Raleway;
+                color: #E7E7EB;
+                text-align: center;
+                margin-top: 1em;
+                margin-bottom: 0em;
+                font-weight: 500;
+                font-size: 1em;
+            }
+            .temperature{
+                display: flex;
+                justify-content: center;
+                flex-direction: row;
+                margin-left: 2em;
+                margin-right: 2em;
+                .max{
+                    font-family: Raleway;
+                    color: #E7E7EB;
+                    margin-right: 4em;
+                    font-weight: 500;
+                }
+                .min{
+                    font-family: Raleway;
+                    font-weight: 500;
+                    color: #A09FB1;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (min-width:768px) and (max-width: 1024px){
+    .grid-days{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2em;
+        margin: 0 3em;
+        div{
+            border-radius: 5px;
+            background-color: #1E213A;
+            text-align: center;
+            img {
+                margin-top: 0em;
+                width: 50px;
+                height: 50px;
+            }
+            .day{
+                font-family: Raleway;
+                color: #E7E7EB;
+                text-align: center;
+                margin-top: 1em;
+                margin-bottom: 0em;
+                font-weight: 500;
+                font-size: 1em;
+            }
+            .temperature{
+                display: flex;
+                justify-content: center;
+                flex-direction: row;
+                margin-left: 2em;
+                margin-right: 2em;
+                .max{
+                    font-family: Raleway;
+                    color: #E7E7EB;
+                    margin-right: 4em;
+                    font-weight: 500;
+                }
+                .min{
+                    font-family: Raleway;
+                    font-weight: 500;
+                    color: #A09FB1;
+                }
+            }
+        }
+    }
+
+}
+
+@media screen and (min-width:400px) and (max-width: 768px){
+    .grid-days{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+        margin: 0 1em;
+        div{
+            border-radius: 5px;
+            background-color: #1E213A;
+            text-align: center;
+            img {
+                margin-top: 0em;
+                width: 50px;
+                height: 50px;
+            }
+            .day{
+                font-family: Raleway;
+                color: #E7E7EB;
+                text-align: center;
+                margin-top: 1em;
+                margin-bottom: 0em;
+                font-weight: 500;
+                font-size: 1em;
+            }
+            .temperature{
+                display: flex;
+                justify-content: center;
+                flex-direction: row;
+                margin-left: 2em;
+                margin-right: 2em;
+                .max{
+                    font-family: Raleway;
+                    color: #E7E7EB;
+                    margin-right: 2em;
+                    font-weight: 500;
+                }
+                .min{
+                    font-family: Raleway;
+                    font-weight: 500;
+                    color: #A09FB1;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 479px){
+    .grid-days{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1em;
+        margin: 0 1em;
+        margin-left: 4em;
+        margin-right: 4em;
+        div{
+            border-radius: 5px;
+            background-color: #1E213A;
+            text-align: center;
+            img {
+                margin-top: 0em;
+                width: 50px;
+                height: 50px;
+            }
+            .day{
+                font-family: Raleway;
+                color: #E7E7EB;
+                text-align: center;
+                margin-top: 1em;
+                margin-bottom: 0em;
+                font-weight: 500;
+                font-size: 1em;
+            }
+            .temperature{
+                display: flex;
+                justify-content: center;
+                flex-direction: row;
+                margin-left: 2em;
+                margin-right: 2em;
+                .max{
+                    font-family: Raleway;
+                    color: #E7E7EB;
+                    margin-right: 2em;
+                    font-weight: 500;
+                }
+                .min{
+                    font-family: Raleway;
+                    font-weight: 500;
+                    color: #A09FB1;
+                }
             }
         }
     }
