--- a/src/app/weather/components/today-status/today-status.component.scss
+++ b/src/app/weather/components/today-status/today-status.component.scss
@@ -1,15 +1,18 @@
 .today-status-container{
     justify-content: center;
     align-items: center;
+    .icon-container{
+        justify-content: center;
+        text-align: center;
+    }
     .weather-icon{
         align-items: center;
-        margin-top: 2em;
-        margin-left: 10em;
-        margin-top: 13em;
+        margin-top: 10em;
+        
     }
     .temperature{
         font-family: Raleway;
-        margin-top: 1em;
+        margin-top: 0.5em;
         color: #E7E7EB;
         font-style: normal;
         font-weight: 500;
@@ -47,5 +50,128 @@
             font-weight: 500;
             font-family: Raleway;
         }
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1366px){
+    .today-status-container{
+        .weather-icon{
+            margin-top: 50%;
+        }
+        .temperature{
+            font-size: 8em;
+        }
+        .description{
+            font-family: Raleway;
+            font-size: 1.5em;
+            font-weight: 600;
+        }
+        .today-date{
+            font-size: 1em;
+        }
+        .location{
+            font-family: Raleway;
+            font-size: 1em;
+        }
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px){
+    .today-status-container{
+        .weather-icon{
+            margin-top: 5em;
+        }
+        .temperature{
+            font-size: 6em;
+        }
+        .description{
+            font-size: 1.2em;
+        }
+        .today-date{
+            font-size: 0.9em;
+        }
+        .location{
+            font-size: 0.8em;
+        }
+    }
+}
+
+@media screen and (min-width:680px) and (max-width: 768px) {
+    .today-status-container{
+        justify-content: center;
+        align-items: center;
+        .weather-icon{
+            margin-top: 0em;
+        }
+        .temperature{
+            font-size: 5em;
+        }
+        .description{
+            font-size: 1.5em;
+        }
+        .today-date{
+            font-size: 1em;
+        }
+        .location{
+            font-size: 1em;
+        }
+    }
+}
+
+@media screen and (min-width:400px) and (max-width: 768px){
+    .today-status-container{
+        justify-content: center;
+        align-items: center;
+        .weather-icon{
+            margin-top: 10em;
+        }
+        .temperature{
+            font-size: 5em;
+        }
+        .description{
+            font-size: 1.5em;
+        }
+        .today-date{
+            font-size: 1em;
+        }
+        .location{
+            font-size: 1em;
+        }
+    }
+}
+
+@media screen and (max-width: 479px){
+    .today-status-container{
+        justify-content: center;
+        align-items: center;
+        .weather-icon{
+            margin-top: 10em;
+        }
+        .temperature{
+            font-size: 5em;
+        }
+        .description{
+            font-size: 1.5em;
+        }
+        .today-date{
+            font-size: 1em;
+        }
+        .location{
+            font-size: 1em;
+            margin:0;
+        }
+        .header{
+            display: flex;
+            justify-content: space-between;
+            margin-top: 0;
+            padding-top: 1em;
+            button{
+                background-color: #6E707A;
+                color: #E7E7EB;
+                font-weight: 500;
+                font-family: Raleway;
+            }
+        }
+        padding-bottom: 1em;
     }
 }
