--- a/src/app/weather/components/next-days/next-days.component.scss
+++ b/src/app/weather/components/next-days/next-days.component.scss
@@ -4,6 +4,7 @@
     grid-gap: 4em;
     margin: 0 12em;
     div{
+        border-radius: 5px;
         background-color: #1E213A;
         text-align: center;
         img {
