--- a/src/app/weather/components/layout/layout.component.scss
+++ b/src/app/weather/components/layout/layout.component.scss
@@ -66,15 +66,11 @@
     }
 }
 
-
-
-@media screen and (min-width:1024px) and (max-width: 1280px){
+@media screen and(min-width: 1281px) and (max-width: 1440px){
     .container {
         display: flex;
-        flex-direction: row;
-        height: 100%;
-        .sidebar{
-            height: 100%;
+        flex-direction: row;       
+        .sidebar{          
             width: 30%;
             max-width: 30em;
             margin: 0;
@@ -85,7 +81,7 @@
             background-repeat: no-repeat;
         }
         .main{
-            height: 100%;
+            
             h1{
                 text-align: center;
                 font-family: Raleway;
@@ -138,13 +134,15 @@
     }    
 }
 
-@media screen and (min-width:768px) and (max-width: 1024px){
+
+
+@media screen and (min-width:1025px) and (max-width: 1280px){
     .container {
         display: flex;
         flex-direction: row;
-        height: 100%;
+        
         .sidebar{
-            height: 100%;
+            
             width: 30%;
             max-width: 30em;
             margin: 0;
@@ -155,7 +153,7 @@
             background-repeat: no-repeat;
         }
         .main{
-            height: 100%;
+            
             h1{
                 text-align: center;
                 font-family: Raleway;
@@ -187,7 +185,75 @@
     
             .footer{
                 color: #A09FB1;
-                margin-top: 1em;
+                margin-top: 6em;
+                text-align: center;
+                margin-right: 5em;
+                p {
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 600;
+                    a {
+                        text-decoration: none;
+                        color: #A09FB1;
+                    }
+                    a:hover{
+                        color: azure;
+                    }
+                }
+            }
+            
+        }
+    }    
+}
+
+@media screen and (min-width:769px) and (max-width: 1024px){
+    .container {
+        display: flex;
+        flex-direction: row;       
+        .sidebar{
+            
+            width: 30%;
+            max-width: 30em;
+            margin: 0;
+            background-color: #1E213A;
+            background-image: url("../../../../assets/images/Cloud-background.png");
+            background-image: linear-gradient(rgba(30, 33, 58, 0.95) 100%,rgba(30, 33, 58, 0.95) 100%), url("../../../../assets/images/Cloud-background.png");
+            background-position: 50% 20%;
+            background-repeat: no-repeat;
+        }
+        .main{          
+            h1{
+                text-align: center;
+                font-family: Raleway;
+                font-style: normal;
+                font-weight: 600;
+                color: #E7E7EB;
+                font-size: 1.5em;
+                margin-bottom: 1em;
+            }
+            display: block;
+            width: 70%;
+            margin: 0;
+            background-color: #100E1D;
+            .buttons{
+                display: flex;
+                flex-direction: row-reverse;
+                margin-top: 1.4em;
+                margin-right: 3em;
+                button {
+                    background-color: #585676;
+                    color: #E7E7EB;
+                    margin-left: 2em;
+                    &.active{
+                        background-color: #E7E7EB;
+                        color: #110E3C
+                    }
+                }
+            }
+    
+            .footer{
+                color: #A09FB1;
+                margin-top: 9em;
                 text-align: center;
                 margin-right: 5em;
                 p {
@@ -207,84 +273,15 @@
         }
     }    
 
-    @media screen and (min-width:400px) and (max-width: 768px){
-        .container {
-            display: flex;
-            flex-direction: row;
-            height: 100%;
-            .sidebar{
-                height: 100%;
-                width: 25%;
-                max-width: 20em;
-                margin: 0;
-                background-color: #1E213A;
-                background-image: url("../../../../assets/images/Cloud-background.png");
-                background-image: linear-gradient(rgba(30, 33, 58, 0.95) 100%,rgba(30, 33, 58, 0.95) 100%), url("../../../../assets/images/Cloud-background.png");
-                background-position: 50% 20%;
-                background-repeat: no-repeat;
-            }
-            .main{
-                height: 100%;
-                h1{
-                    text-align: center;
-                    font-family: Raleway;
-                    font-style: normal;
-                    font-weight: 600;
-                    color: #E7E7EB;
-                    font-size: 1.7em;
-                    margin-bottom: 1em;
-                    margin-top: 1em;
-                }
-                display: block;
-                width: 80%;
-                margin: 0;
-                background-color: #100E1D;
-                .buttons{
-                    display: flex;
-                    flex-direction: row-reverse;
-                    margin-top: 1.4em;
-                    margin-right: 1em;
-                    button {
-                        background-color: #585676;
-                        color: #E7E7EB;
-                        margin-left: 2em;
-                        &.active{
-                            background-color: #E7E7EB;
-                            color: #110E3C
-                        }
-                    }
-                }
-        
-                .footer{
-                    color: #A09FB1;
-                    margin-top: 51em;
-                    text-align: center;
-                    margin-right: 15em;
-                    p {
-                        font-family: Raleway;
-                        font-style: normal;
-                        font-weight: 600;
-                        a {
-                            text-decoration: none;
-                            color: #A09FB1;
-                        }
-                        a:hover{
-                            color: azure;
-                        }
-                    }
-                }
-                
-            }
-        }    
-    }
 }
 
-@media screen and (max-width: 479px){
+@media screen and (min-width:480px) and (max-width: 768px){
     .container {
         display: flex;
-        flex-direction: column;
-        .sidebar{
-            width: 100%;
+        flex-direction: row;
+        .sidebar{       
+            width: 28%;
+            max-width: 20em;
             margin: 0;
             background-color: #1E213A;
             background-image: url("../../../../assets/images/Cloud-background.png");
@@ -293,7 +290,75 @@
             background-repeat: no-repeat;
         }
         .main{
+            height: auto;
             h1{
+                text-align: center;
+                font-family: Raleway;
+                font-style: normal;
+                font-weight: 600;
+                color: #E7E7EB;
+                font-size: 1.7em;
+                margin-bottom: 1em;
+                margin-top: 1em;
+            }
+            display: block;
+            width: 72%;
+            margin: 0;
+            background-color: #100E1D;
+            .buttons{
+                display: flex;
+                flex-direction: row-reverse;
+                margin-top: 2em;
+                margin-right: 3em;
+                button {
+                    background-color: #585676;
+                    color: #E7E7EB;
+                    margin-left: 2em;
+                    &.active{
+                        background-color: #E7E7EB;
+                        color: #110E3C
+                    }
+                }
+            }
+    
+            .footer{
+                color: #A09FB1;
+                margin-top: 51em;
+                text-align: center;
+                margin-right: 15em;
+                p {
+                    font-family: Raleway;
+                    font-style: normal;
+                    font-weight: 600;
+                    a {
+                        text-decoration: none;
+                        color: #A09FB1;
+                    }
+                    a:hover{
+                        color: azure;
+                    }
+                }
+            }
+            
+        }
+    }    
+}
+
+@media (max-aspect-ratio: 20/9) and(orientation:portrait) and(max-width: 479px){
+    .container {
+        display: flex;
+        flex-direction: column;
+        .sidebar{
+            width: 100% !important;
+            overflow-x: hidden;
+            background-color: #1E213A;
+            background-image: url("../../../../assets/images/Cloud-background.png");
+            background-image: linear-gradient(rgba(30, 33, 58, 0.95) 100%,rgba(30, 33, 58, 0.95) 100%), url("../../../../assets/images/Cloud-background.png");
+            background-position: 50% 20%; 
+            background-repeat: no-repeat;
+        }
+        .main{         
+            h1{              
                 text-align: center;
                 font-family: Raleway;
                 font-style: normal;
@@ -322,7 +387,7 @@
                     }
                 }
             }
-    
+            text-align: center;
             .footer{
                 color: #A09FB1;
                 margin-top: 4em;               
