--- a/src/app/weather/components/next-days/next-days.component.scss
+++ b/src/app/weather/components/next-days/next-days.component.scss
@@ -39,6 +39,52 @@
     }
 }
 
+@media screen and(min-width: 1281px) and (max-width: 1440px){
+    .grid-days{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2em;
+        margin: 0 10em 0 10em;
+        div{
+            border-radius: 5px;
+            background-color: #1E213A;
+            text-align: center;
+            img {
+                margin-top: 0em;
+                width: 64px;
+                height: 64px;
+            }
+            .day{
+                font-family: Raleway;
+                color: #E7E7EB;
+                text-align: center;
+                margin-top: 1em;
+                margin-bottom: 0em;
+                font-weight: 500;
+                font-size: 1em;
+            }
+            .temperature{
+                display: flex;
+                justify-content: center;
+                flex-direction: row;
+                margin-left: 2em;
+                margin-right: 2em;
+                .max{
+                    font-family: Raleway;
+                    color: #E7E7EB;
+                    margin-right: 4em;
+                    font-weight: 500;
+                }
+                .min{
+                    font-family: Raleway;
+                    font-weight: 500;
+                    color: #A09FB1;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (min-width:1025px) and (max-width: 1280px){
     .grid-days{
         display: grid;
@@ -86,7 +132,7 @@
 }
 
 
-@media screen and (min-width:768px) and (max-width: 1024px){
+@media screen and (min-width:769px) and (max-width: 1024px){
     .grid-days{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -138,7 +184,7 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 1em;
-        margin: 0 1em;
+        margin: 0 0.5em 1em 0.5em;
         div{
             border-radius: 5px;
             background-color: #1E213A;
@@ -185,8 +231,8 @@
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 1em;
         margin: 0 1em;
-        margin-left: 4em;
-        margin-right: 4em;
+        margin-left: 3em;
+        margin-right: 6em;
         div{
             border-radius: 5px;
             background-color: #1E213A;
